syntax = "proto3";

package messaging;

message Message {
  string text = 1;
  int64 tg_user_id = 2;
}

service MessageService {
  rpc SendMessage (Message) returns (Message) {}
}
